--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "socket-chat-example",
   "version": "0.0.1",
   "description": "my first socket.io app",
+  "engines": {
+  "node": "6.2.0"
+},
+"scripts": {
+  "start": "node server.js"
+}
   "dependencies": {
     "bufferutil": "1.2.1",
     "express": "4.13.4",
