--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "node": "6.2.0"
 },
 "scripts": {
-  "start": "node server.js"
+  "start": "node index.js"
 },
   "dependencies": {
     "bufferutil": "1.2.1",
